k8s실습내용/Practice/my_vote.yml
# Redis_deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  selector: 
    matchLabels:
      service: redis # 왜 여기는 service:로 뒀을까?
  template:
    metadata:
      labels:
        service: redis
    spec:
      containers:
        - name: redis
          image: redis:latest
          ports:
            - containerPort: 6379
              protocol: TCP
---
# Redis_Service
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  ports: 
    - port: 6379
      protocol: TCP
  selector:
    service: redis
---
# Postgres_deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  selector:
    matchLabels:
      service: db
  template:
    metadata:
      labels:
        service: db
    spec:
      containers:
        - name: db
          image: postgres:9.4
          ports:
            - containerPort: 5432
              protocol: TCP
          env: # 여기 설정하는 게 디폴트 세팅인가?
            - name: POSTGRES_USER
              value: "postgres"
            - name: POSTGRES_PASSWORD
              value: "postgres"

---
# postgres_service
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  ports:
    - port: 5432
      protocol: TCP
  selector: 
    service: db

---
# worker_deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
spec:
  selector:
    matchLabels:
      service: worker
  template:
    metadata:
      labels:
        service: worker
    spec:
      containers:
        - name: worker
          image: ghcr.io/subicura/voting/worker:latest
          env: # 여기 HOST 값은 위에서 설정한 label일까 metadata의 name일까? 
            - name: REDIS_HOST
              value: "redis"
            - name: REDIS_PORT
              value: "6379"
            - name: POSTGRES_HOST
              value: "db"
            - name: POSTGRES_PORT
              value: "5432"

# worker은 service를 설정하지 않는다. 왜일까?
---
# vote_deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote
spec:
  selector:
    matchLabels:
      service: vote
  template:
    metadata:
      labels:
        service: vote
    spec:
      containers:
        - name: vote
          image: ghcr.io/subicura/voting/vote:latest
          ports:
            - containerPort: 80
              protocol: TCP

---
# vote_service
apiVersion: v1
kind: Service
metadata:
  name: vote
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    service: vote

---
# result_deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result
spec:
  selector:
    matchLabels:
      service: result
  template:
    metadata:
      labels:
        service: result
    spec:
      containers:
        - name: result
          image: ghcr.io/subicura/voting/result:latest
          ports:
            - containerPort: 80
              protocol: TCP

---
# result_service
apiVersion: v1
kind: Service
metadata:
  name: result
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      nodePort: 31001
  selector:
    service: vote
