k8s실습내용/Practice/wp_wordpress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: app
  template:
    metadata:
      labels:
        app: wordpress
        tier: app
    spec:
      containers:
        - name: wordpress
          image: wordpress:5.9.1-php8.1-apache
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      nodePort: 30000
  selector:
    app: wordpress
    tier: app
